--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "langchain>=0.3.14",
+    "langchain-community>=0.3.14",
+    "openai>=1.59.7",
     "pydantic>=2.10.5",
+    "pytube>=15.0.0",
+    "youtube-transcript-api>=0.6.3",
     "zulip>=0.9.0",
 ]
