--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "boto3>=1.35.99",
     "langchain>=0.3.14",
     "langchain-community>=0.3.14",
     "openai>=1.59.7",
