--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,14 +1,12 @@
 ---
 version: 1.0
-runtime: python3
+runtime: docker
+
 build:
-  commands:
-    build:
-      - pip install --upgrade pip
-      - pip install -r requirements.txt
+  dockerfile: Dockerfile
+
 run:
-  runtime-version: 3.11.11
-  command: python restart_on_crash.py
+  runtime-version: 1.0
   network:
     port: 80
   env:
