--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,10 +3,11 @@ version: 1.0
 runtime: python311
 build:
   commands:
-    - python3 -m venv .venv
-    - source .venv/bin/activate
-    - pip3 install --upgrade pip
-    - pip3 install -r requirements.txt
+    build:
+      - python3 -m venv .venv
+      - source .venv/bin/activate
+      - pip3 install --upgrade pip
+      - pip3 install -r requirements.txt
 
 run:
   runtime-version: 3.11
