--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,14 +3,15 @@ version: 1.0
 runtime: python311
 build:
   commands:
-    build:
-      - python3 -m venv .venv
-      - source .venv/bin/activate
-      - pip3 install --upgrade pip
-      - pip3 install -r requirements.txt
+    build:   
+      - pip3 install pipenv
+      - pipenv install
 
 run:
   runtime-version: 3.11
+  pre-run:  
+    - pip3 install pipenv
+    - pipenv install
   command: python3 restart_on_crash.py
   network:
     port: 80
